# research-summary-assistant

./: .env.example  .gitignore  README.md  README_POSTMAN_REMOTE.md  postman_collection.json  postman_environment.json  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/api/: main.py
app/core/: ai_client.py  challenge_engine.py  document_processor.py  qa_engine.py
app/frontend/: main.py
app/models/: database.py  schemas.py
app/utils/: config.py  logging_config.py
config/: README.md  logging.yaml
docs/: API.md  DEVELOPMENT.md  GEMINI_MIGRATION.md
scripts/: dev.sh  setup.py
tests/: conftest.py  test_api.py  test_document_processor.py
